<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Treatments.PatientTreatment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/patientTreatment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/treatment"/>

        <Spinner
            android:id="@+id/spinnerTreatments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/treatments"
            android:prompt="@string/treatments_visits"
            android:spinnerMode="dropdown">

        </Spinner>

    </LinearLayout>

    <Button
        android:id="@+id/buttonSubmitTreatment"
        android:background="@drawable/btn_style_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"/>

</LinearLayout>