<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Appointments.CreateAppointment">

    <TextView
        android:id="@+id/choose_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours_prompt"/>
        <Spinner
            android:id="@+id/spinnerTreatmentHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/hours"
            android:prompt="@string/hours_prompt"
            android:spinnerMode="dropdown">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/treatment"/>
        <Spinner
            android:id="@+id/spinnerTreatments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown">

        </Spinner>
    </LinearLayout>

    <Button
        android:id="@+id/buttonSubmitAppo"
        android:background="@drawable/btn_style_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_submit"/>

</LinearLayout>